--- a/frontend/src/styles/product.scss
+++ b/frontend/src/styles/product.scss
@@ -25,17 +25,28 @@
     display: flex;
     flex-direction: row;
     background-color: #FFFFFF;
-    height:100%;
-    width:100%;
-    overflow: scroll;
     overflow: hidden;
+    justify-content: center; 
+    align-items: center; 
+
+    .iconWrapper{
+      width: 5vw;
+      height: 5vw;
+      min-width:200px;
+      min-height: 200px;
+      text-align: center;
+      display:inline-flex;
+
+    }
+
+
 }
 
 .product{
     display:none;
     opacity:0;
     animation:fadeout  1000ms;
-
+    
     &--visible{
         animation: fadein  1000ms;
         opacity: 1;
@@ -55,6 +66,4 @@
             background-color:inherit;
         }
     }
-
-
 }
