adding little styling

--- a/frontend/src/styles/base.scss
+++ b/frontend/src/styles/base.scss
@@ -9,6 +9,9 @@ $fa-font-path: "~font-awesome/fonts";
     font-family: 'Alegreya';
 }
 
+#root{
+    min-width: 1024px;
+}
 
 .image {
     display:block;
