--- a/frontend/src/styles/product.scss
+++ b/frontend/src/styles/product.scss
@@ -32,7 +32,9 @@
     .iconWrapper{
       height: 5vw;
       text-align: center;
-      display:inline-flex;
+      display:flex;
+      justify-content: center;
+      align-items: center;
       flex:1;
       min-height: 200px;
       border:solid 1px #EEEEEE;
