--- a/frontend/src/styles/base.scss
+++ b/frontend/src/styles/base.scss
@@ -3,19 +3,55 @@ $fa-font-path: "~font-awesome/fonts";
 @import '../../node_modules/font-awesome/scss/font-awesome.scss';
 
 
+
+
+
 * {
-    background-color: #F0F0F0;
+    background-color: #FFFFFF;
     font-family: 'Alegreya';
 }
+
 
 #root{
     min-width: 1024px;
     max-width: 2048px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.content{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .image {
     display:flex;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    position: relative;
+    width:100%;
+    margin:auto;
+    margin-top: 100px;
+    opacity: 0.6;
+}
+.icon {
+    width:30px;
+    height:30px;
+}
+.introductiontext{
+    display: flex;
+    background-color: rgba(255, 255, 255, 0.0);
+    justify-content: center;
+    position: relative;
+    font-size: 20px;
+    width: 500px;
+    margin: auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+.parallax-inner{
+    background-color: rgba(0,0,0,0);
 }
