--- a/frontend/src/styles/header.scss
+++ b/frontend/src/styles/header.scss
@@ -5,61 +5,63 @@
     top:0px;
     position: fixed;
     width:100%;
+    z-index: 1;
     font-family: 'lucida grande', tahoma, verdana, arial, sans-serif;
         &__title{
-        display:flex;
-        font-weight: 600;
-        padding:10px;
-        font-size: 25px;
-        .image{
-            width:30px;
-            height:30px;
-        }
-
-    }
-    &__menu{
-        display: flex;
-        flex-direction: row;
-        padding:5px;
-        background-color: #c0c0c0;
-        &__home{
-            height: 50px;
-            display: flex;
-            align-items: center;
-            font-weight: 800;
-            margin:0px;
-            padding:5px;
-            background-color: #c0c0c0;
-
-            &:hover{
-                color: #CCCCCC;
+            display:flex;
+            font-weight: 600;
+            padding:10px;
+            font-size: 25px;
+            .image{
+                width:30px;
+                height:30px;
             }
         }
-        &__shop{
-            height: 50px;
+        &__menuitems{
             display: flex;
-            align-items: center;
-            font-weight: 800;
-            margin:0px;
-            padding:5px;
-            background-color: #c0c0c0;
-
-            &:hover{
-                color: #CCCCCC;
+            width: 100%;
+            background-color:#c0c0c0;
+            &__home{
+                color:black;
+                height: 50px;
+                display: flex;
+                align-items: center;
+                font-weight: 800;
+                margin:0px;
+                padding:5px;
+                background-color: #c0c0c0;
+    
+                &:hover{
+                    color: #CCCCCC;
+                }
+            }
+            &__shop{
+                color:black;
+                height: 50px;
+                display: flex;
+                align-items: center;
+                font-weight: 800;
+                margin:0px;
+                padding:5px;
+                background-color: #c0c0c0;
+    
+                &:hover{
+                    color: #CCCCCC;
+                }
+            }
+            &__contacts{
+                color:black;
+                height: 50px;
+                display: flex;
+                align-items: center;
+                font-weight: 800;
+                margin:0px;
+                padding:5px;
+                background-color: #c0c0c0;
+    
+                &:hover{
+                    color: #CCCCCC;
+                }
             }
         }
-        &__contacts{
-            height: 50px;
-            display: flex;
-            align-items: center;
-            font-weight: 800;
-            margin:0px;
-            padding:5px;
-            background-color: #c0c0c0;
-
-            &:hover{
-                color: #CCCCCC;
-            }
-        }
-    }
 }
